correct image alignment

--- a/css/style.css
+++ b/css/style.css
@@ -223,15 +223,6 @@ section h2 {
   margin: 50px 0 30px;
 }
 
-@media (max-width: 700px) {
-  .details-top {
-    display: block;
-    margin-bottom: 40px;
-    padding-bottom: 20px;
-    border-bottom: #ccc solid 1px;
-  }
-}
-
 .details-top img {
   width: 400px;
   height: 100%;
@@ -349,4 +340,20 @@ section h2 {
 
 .alert-error {
   background: red;
+}
+
+
+@media (max-width: 700px) {
+  .details-top {
+    display: block;
+    margin-bottom: 40px;
+    padding-bottom: 20px;
+    border-bottom: #ccc solid 1px;
+  }
+
+  .details-top img {
+  display: block;
+  margin: auto;
+}
+
 }
